Added log.isDebugEnabled() check to prevent silent StringBuffer creation when not in debug mode, Replaced e.printStackTrace() with log.error(e) so that logger would be used instead of stderr, Added seralVersionUid where it was missing, Removed unused private variables, Converted logic blocks to enhanced where allowable, Added braces to blocks where missing for consistancy, Removed unused imports, Added loggers to classes where nessasary, Reduced object creations with Object.valueOf()